Fix wrapping problems in Safari and IE

--- a/assets/sass/patterns/organisms/grid-listing.scss
+++ b/assets/sass/patterns/organisms/grid-listing.scss
@@ -25,10 +25,14 @@
 
     float: left;
     @include margin(0 $grid-listing-spacing-measure $blg-space-extra-small-in-px 0);
-    width: calc((100% - #{$grid-listing-spacing-measure}px) / 2);
+    width: calc((100% - #{$grid-listing-spacing-measure}px) / 2 - 0.1px);
 
     &:nth-child(2n) {
       margin-right: 0;
+      @supports (display: flex) {
+        width: auto;
+        flex: 1;
+      }
     }
 
     .archive-nav-link {
@@ -45,14 +49,22 @@
   @media only all and (min-width: #{get-rem-from-px($bkpt-site--wide)}em) {
 
     @include margin(0 $grid-listing-spacing-measure $blg-space-extra-small-in-px 0);
-    width: calc((100% - #{2 * $grid-listing-spacing-measure}px) / 3);
+    width: calc((100% - #{2 * $grid-listing-spacing-measure}px) / 3 - 0.1px);
 
     &:nth-child(2n) {
-      @include margin($grid-listing-spacing-measure, "right")
+      @include margin($grid-listing-spacing-measure, "right");
+      @supports (display: flex) {
+        width: calc((100% - #{2 * $grid-listing-spacing-measure}px) / 3);
+        flex: none;
+      }
     }
 
     &:nth-child(3n) {
       margin-right: 0;
+      @supports (display: flex) {
+        width: auto;
+        flex: 1;
+      }
     }
 
   }
@@ -61,14 +73,23 @@
   @media only all and (min-width: #{get-rem-from-px($bkpt-site--x-wide)}em) {
 
     @include margin(0 $grid-listing-spacing-measure $blg-space-extra-small-in-px 0);
-    width: calc((100% - #{3 * $grid-listing-spacing-measure}px) / 4);
+    width: calc((100% - #{3 * $grid-listing-spacing-measure}px) / 4 - 0.1px);
 
+    &:nth-child(2n),
     &:nth-child(3n) {
-      @include margin($grid-listing-spacing-measure, "right")
+      @include margin($grid-listing-spacing-measure, "right");
+      @supports (display: flex) {
+        width: calc((100% - #{3 * $grid-listing-spacing-measure}px) / 4);
+        flex: none;
+      }
     }
 
     &:nth-child(4n) {
       margin-right: 0;
+      @supports (display: flex) {
+        width: auto;
+        flex: 1;
+      }
     }
 
   }
